--- a/jenkins-agent/Dockerfile
+++ b/jenkins-agent/Dockerfile
@@ -1,6 +1,6 @@
 FROM jenkins/ssh-agent:jdk11
 USER root
-RUN apt-get update && apt-get install -y lsb-release
+RUN apt-get update && apt-get install -y lsb-release curl
 RUN curl -fsSLo /usr/share/keyrings/docker-archive-keyring.asc \
   https://download.docker.com/linux/debian/gpg
 RUN echo "deb [arch=$(dpkg --print-architecture) \
