--- a/jenkins-controller/docker-compose.yml
+++ b/jenkins-controller/docker-compose.yml
@@ -19,6 +19,7 @@ services:
         target: /var/jenkins_home
     expose:
       - 2376
+    restart: unless-stopped
     # ports:
     #   - 2377:2376
 
@@ -37,6 +38,7 @@ services:
     volumes:
       - jenkins-data:/var/jenkins_home
       - jenkins-docker-certs:/certs/client:ro
+    restart: unless-stopped
 
 networks:
   jenkins:
